--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -85,6 +85,10 @@
         <activity android:name=".learndata.LearnUsingLoaderActivity">
         </activity>
         <activity android:name=".notificationandalerts.LearnLightActionSoundActivity">
+        </activity>
+        <activity android:name=".notificationandalerts.CustomToastActivity">
+        </activity>
+        <activity android:name=".LearnNotificationAndAlertMainActivity">
         </activity>
     </application>
 
