--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
     <application
         android:allowBackup="true"
@@ -89,6 +90,14 @@
         <activity android:name=".notificationandalerts.CustomToastActivity">
         </activity>
         <activity android:name=".LearnNotificationAndAlertMainActivity">
+        </activity>
+        <activity android:name=".notificationandalerts.AlertDialogActivity">
+        </activity>
+        <activity android:name=".notificationandalerts.ProgressActivity">
+        </activity>
+        <activity android:name=".notificationandalerts.LightActionSoundReduxActivity">
+        </activity>
+        <activity android:name=".notificationandalerts.MediaPlayerNotificationActivity">
         </activity>
     </application>
 
