add sensorListActivity , LearnReadingSensorDataActivity, (WIP) Reading Device OrientationActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
 
+    <!-- android required -->
+    <uses-feature
+        android:name="android.hardware.sensor.compass"
+        android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -112,6 +117,12 @@
         <activity android:name=".touchscreenandsensors.MultiTouchZoomActivity">
         </activity>
         <activity android:name=".touchscreenandsensors.SwipeToRefreshActivity">
+        </activity>
+        <activity android:name=".touchscreenandsensors.SensorListActivity">
+        </activity>
+        <activity android:name=".touchscreenandsensors.LearnReadingSensorDataActivity">
+        </activity>
+        <activity android:name=".touchscreenandsensors.ReadingDeviceOrientationActivity">
         </activity>
     </application>
 
