add example of Flip Card Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -136,6 +136,8 @@
         </activity>
         <activity android:name=".graphicandanimation.LearnSimpleImageSliderActivity">
         </activity>
+        <activity android:name=".graphicandanimation.FlipCardActivity">
+        </activity>
     </application>
 
 </manifest>
