add example Zoom Animation With CUstom Transition Activity :octocat:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,6 +138,8 @@
         </activity>
         <activity android:name=".graphicandanimation.FlipCardActivity">
         </activity>
+        <activity android:name=".graphicandanimation.ZoomAnimationWithCustomTransitionActivity">
+        </activity>
     </application>
 
 </manifest>
