add simple OpenGL example and DrawSimpleShape (Triangle using openGL) activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-feature
         android:name="android.hardware.sensor.compass"
         android:required="true"/>
+    <uses-feature android:glEsVersion="0x00010001" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -139,6 +140,12 @@
         <activity android:name=".graphicandanimation.FlipCardActivity">
         </activity>
         <activity android:name=".graphicandanimation.ZoomAnimationWithCustomTransitionActivity">
+        </activity>
+        <activity android:name=".opengles.SimpleOpenGL">
+        </activity>
+        <activity android:name=".LearnOpenGLMainActivity">
+        </activity>
+        <activity android:name=".opengles.DrawSimpleShapeActivity">
         </activity>
     </application>
 
