--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,6 +155,14 @@
         </activity>
         <activity android:name=".opengles.RotateRectangleWithUserInputActivity">
         </activity>
+        <activity android:name=".MultimediaMainActivity">
+        </activity>
+        <activity android:name=".multimedia.PlayingSoundEffectWithSoundPoolActivity">
+        </activity>
+        <activity android:name=".multimedia.HardwareMediaControlsActivity">
+        </activity>
+        <activity android:name=".multimedia.UsingDefaultCameraAppActivity">
+        </activity>
     </application>
 
 </manifest>
