--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <!-- android required -->
     <uses-feature
@@ -162,6 +166,10 @@
         <activity android:name=".multimedia.HardwareMediaControlsActivity">
         </activity>
         <activity android:name=".multimedia.UsingDefaultCameraAppActivity">
+        </activity>
+        <activity android:name=".multimedia.CameraAPIActivity">
+        </activity>
+        <activity android:name=".multimedia.Camera2APIActivity">
         </activity>
     </application>
 
