--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
@@ -170,6 +172,12 @@
         <activity android:name=".multimedia.CameraAPIActivity">
         </activity>
         <activity android:name=".multimedia.Camera2APIActivity">
+        </activity>
+        <activity android:name=".TelephonyNetworkAndWebMainActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.MakePhoneCallActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.LearnPhoneStateActivity">
         </activity>
     </application>
 
