--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
@@ -41,6 +44,11 @@
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_provider_info"/>
+        </receiver>
+        <receiver android:name=".telephonynetworkweb.broadcastreceiver.SMSBroadcastReceiver">
+            <intent-filter android:priority="100">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
         </receiver>
 
         <activity android:name=".MainActivity">
@@ -178,6 +186,14 @@
         <activity android:name=".telephonynetworkweb.MakePhoneCallActivity">
         </activity>
         <activity android:name=".telephonynetworkweb.LearnPhoneStateActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.SendSMSActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.ReceiveSMSActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.LearnWebViewActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.LearnVolleyLibraryActivity">
         </activity>
     </application>
 
