add Volley JSON and Cancel Request Example

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -195,6 +195,10 @@
         </activity>
         <activity android:name=".telephonynetworkweb.LearnVolleyLibraryActivity">
         </activity>
+        <activity android:name=".telephonynetworkweb.LearnVolleyWithCancelAndRequestConnectionActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.VolleyRequestJSONActivity">
+        </activity>
     </application>
 
 </manifest>
