add image Request Volley Activity :octocat:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -199,6 +199,8 @@
         </activity>
         <activity android:name=".telephonynetworkweb.VolleyRequestJSONActivity">
         </activity>
+        <activity android:name=".telephonynetworkweb.VolleyImageRequestActivity">
+        </activity>
     </application>
 
 </manifest>
