--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,19 @@
         android:glEsVersion="0x00010001"
         android:required="true"/>
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name="android.support.multidex.MultiDexApplication"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="android.app.default_searchable"
@@ -200,6 +208,26 @@
         <activity android:name=".telephonynetworkweb.VolleyRequestJSONActivity">
         </activity>
         <activity android:name=".telephonynetworkweb.VolleyImageRequestActivity">
+        </activity>
+        <activity android:name=".telephonynetworkweb.NetworkImageViewActivity">
+        </activity>
+        <activity android:name=".LocationAndGeoFencingMainActivity">
+        </activity>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
+
+        <activity
+            android:name=".locationandgeofencing.LearnGoogleMapsActivity"
+            android:label="@string/title_activity_learn_google_maps">
         </activity>
     </application>
 
