--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name="android.support.multidex.MultiDexApplication"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="android.app.default_searchable"
@@ -228,6 +228,8 @@
         <activity
             android:name=".locationandgeofencing.LearnGoogleMapsActivity"
             android:label="@string/title_activity_learn_google_maps">
+        </activity>
+        <activity android:name=".locationandgeofencing.GetLastLocationActivity">
         </activity>
     </application>
 
